--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "dependencies": {
     "angular": "^1.5.0",
-    "angular-ui-router": "1.0.0-beta.1"
+    "angular-ui-router": "1.0.0-beta.1",
+    "bootstrap-sass": "^3.3.7",
+    "angular-bootstrap": "^2.3.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.5.0"
