--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,8 +3,8 @@
     "angular-mocks": "^1.5.0-beta.2",
     "gulp-angular-templatecache": "^1.8.0",
     "del": "^2.0.2",
-    "gulp": "gulpjs/gulp#4ed9a4a3275559c73a396eff7e1fde3824951ebb",
-    "gulp-hub": "frankwallis/gulp-hub#d461b9c700df9010d0a8694e4af1fb96d9f38bf4",
+    "gulp": "github:gulpjs/gulp#4ed9a4a3275559c73a396eff7e1fde3824951ebb",
+    "gulp-hub": "github:frankwallis/gulp-hub#d461b9c700df9010d0a8694e4af1fb96d9f38bf4",
     "gulp-filter": "^4.0.0",
     "gulp-util": "^3.0.7",
     "gulp-useref": "^3.0.3",
@@ -65,5 +65,19 @@
     "extends": [
       "xo-space"
     ]
-  }
+  },
+  "name": "kowloon",
+  "version": "1.0.0",
+  "description": "School project",
+  "main": "gulpfile.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AlexVanderbist/kowloon-webdev-angular-nodejs.git"
+  },
+  "author": "Alex Vanderbist",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/AlexVanderbist/kowloon-webdev-angular-nodejs/issues"
+  },
+  "homepage": "https://github.com/AlexVanderbist/kowloon-webdev-angular-nodejs#readme"
 }
