--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -5,7 +5,9 @@
     "angular": "^1.5.0",
     "angular-ui-router": "1.0.0-beta.1",
     "bootstrap-sass": "^3.3.7",
-    "angular-bootstrap": "^2.3.0"
+    "angular-bootstrap": "^2.3.0",
+    "angular-animate": "^1.6.0",
+    "angular-touch": "^1.6.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.5.0"
