--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -3,13 +3,19 @@
   "version": "0.0.1",
   "dependencies": {
     "angular": "^1.5.0",
-    "angular-ui-router": "1.0.0-beta.1",
+    "angular-ui-router": "^0.3.2",
     "bootstrap-sass": "^3.3.7",
     "angular-bootstrap": "^2.3.0",
     "angular-animate": "^1.6.0",
-    "angular-touch": "^1.6.0"
+    "angular-touch": "^1.6.0",
+    "angular-bootstrap-slider": "^0.1.28",
+    "seiyria-bootstrap-slider": "^9.5.4"
   },
   "devDependencies": {
     "angular-mocks": "^1.5.0"
+  },
+  "resolutions": {
+    "angular": "^1.5.0",
+    "seiyria-bootstrap-slider": "^9.5.4"
   }
 }
