--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -9,7 +9,8 @@
     "angular-animate": "^1.6.1",
     "angular-touch": "^1.6.0",
     "angular-bootstrap-slider": "^0.1.28",
-    "seiyria-bootstrap-slider": "^9.5.4"
+    "seiyria-bootstrap-slider": "^9.5.4",
+    "angular-sly": "^0.1.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.5.0"
@@ -17,5 +18,17 @@
   "resolutions": {
     "angular": "1.6.1",
     "seiyria-bootstrap-slider": "^9.5.4"
+  },
+  "overrides": {
+    "sly": {
+      "main": [
+        "./dist/sly.min.js"
+      ]
+    },
+    "angular-sly": {
+      "main": [
+        "./dist/angular-sly.js"
+      ]
+    }
   }
 }
